# 5_CmakePractice

./: CMakeLists.txt  Makefile  README.md  main  mult.cpp
include/: head.h
ofile/: app
src/: div.cpp  sub.cpp
v2/: CMakeLists.txt  main.cpp
v2/src/: add.cpp
v3/: CMakeLists.txt  main.cpp
v4/: CMakeLists.txt  main.cpp
